feat: integrate Indigo 200

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -35,6 +35,7 @@ collections:
                   - { label: "White", value: "white" }
                   - { label: "Black", value: "black" }                
                   - { label: "Indigo 100", value: "indigo-100" }
+                  - { label: "Indigo 200", value: "indigo-200" }
                   - { label: "Indigo 500", value: "indigo-500" }
                   - { label: "Indigo 800", value: "indigo-800" }
                   - { label: "Blue 500", value: "blue-500" }
@@ -51,6 +52,7 @@ collections:
                   - { label: "White", value: "white" }
                   - { label: "Black", value: "black" }                
                   - { label: "Indigo 100", value: "indigo-100" }
+                  - { label: "Indigo 200", value: "indigo-200" }
                   - { label: "Indigo 500", value: "indigo-500" }
                   - { label: "Indigo 800", value: "indigo-800" }
                   - { label: "Blue 500", value: "blue-500" }
@@ -67,6 +69,7 @@ collections:
                   - { label: "White", value: "white" }
                   - { label: "Black", value: "black" }                
                   - { label: "Indigo 100", value: "indigo-100" }
+                  - { label: "Indigo 200", value: "indigo-200" }
                   - { label: "Indigo 500", value: "indigo-500" }
                   - { label: "Indigo 800", value: "indigo-800" }
                   - { label: "Blue 500", value: "blue-500" }
@@ -195,6 +198,7 @@ collections:
           - { label: "White", value: "white" }
           - { label: "Black", value: "black" }                
           - { label: "Indigo 100", value: "indigo-100" }
+          - { label: "Indigo 200", value: "indigo-200" }
           - { label: "Indigo 500", value: "indigo-500" }
           - { label: "Indigo 800", value: "indigo-800" }
           - { label: "Blue 500", value: "blue-500" }
@@ -211,6 +215,7 @@ collections:
           - { label: "White", value: "white" }
           - { label: "Black", value: "black" }                
           - { label: "Indigo 100", value: "indigo-100" }
+          - { label: "Indigo 200", value: "indigo-200" }
           - { label: "Indigo 500", value: "indigo-500" }
           - { label: "Indigo 800", value: "indigo-800" }
           - { label: "Blue 500", value: "blue-500" }
@@ -227,6 +232,7 @@ collections:
           - { label: "White", value: "white" }
           - { label: "Black", value: "black" }                
           - { label: "Indigo 100", value: "indigo-100" }
+          - { label: "Indigo 200", value: "indigo-200" }
           - { label: "Indigo 500", value: "indigo-500" }
           - { label: "Indigo 800", value: "indigo-800" }
           - { label: "Blue 500", value: "blue-500" }
@@ -250,6 +256,7 @@ collections:
               - { label: "White", value: "white" }
               - { label: "Black", value: "black" }                
               - { label: "Indigo 100", value: "indigo-100" }
+              - { label: "Indigo 200", value: "indigo-200" }
               - { label: "Indigo 500", value: "indigo-500" }
               - { label: "Indigo 800", value: "indigo-800" }
               - { label: "Blue 500", value: "blue-500" }
@@ -266,6 +273,7 @@ collections:
               - { label: "White", value: "white" }
               - { label: "Black", value: "black" }                
               - { label: "Indigo 100", value: "indigo-100" }
+              - { label: "Indigo 200", value: "indigo-200" }
               - { label: "Indigo 500", value: "indigo-500" }
               - { label: "Indigo 800", value: "indigo-800" }
               - { label: "Blue 500", value: "blue-500" }
@@ -282,6 +290,7 @@ collections:
               - { label: "White", value: "white" }
               - { label: "Black", value: "black" }                
               - { label: "Indigo 100", value: "indigo-100" }
+              - { label: "Indigo 200", value: "indigo-200" }
               - { label: "Indigo 500", value: "indigo-500" }
               - { label: "Indigo 800", value: "indigo-800" }
               - { label: "Blue 500", value: "blue-500" }
