--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -35,13 +35,14 @@ collections:
                   - { label: "White", value: "white" }
                   - { label: "Black", value: "black" }                
                   - { label: "Indigo 100", value: "indigo-100" }
+                  - { label: "Indigo 200", value: "indigo-200" }
                   - { label: "Indigo 500", value: "indigo-500" }
-                  - { label: "Indigo 900", value: "indigo-900" }
+                  - { label: "Indigo 800", value: "indigo-800" }
                   - { label: "Blue 500", value: "blue-500" }
-                  - { label: "Red 500", value: "red-500" }
-                  - { label: "Red 900", value: "red-900" }
+                  - { label: "Coral 500", value: "coral-500" }
+                  - { label: "Coral 800", value: "coral-800" }
+                  - { label: "Yellow 200", value: "yellow-200" }
                   - { label: "Yellow 500", value: "yellow-500" }
-                  - { label: "Yellow 900", value: "yellow-900" }
                 default: ["black"]
                 required: false
               - label: "Background Colour"
@@ -51,13 +52,14 @@ collections:
                   - { label: "White", value: "white" }
                   - { label: "Black", value: "black" }                
                   - { label: "Indigo 100", value: "indigo-100" }
+                  - { label: "Indigo 200", value: "indigo-200" }
                   - { label: "Indigo 500", value: "indigo-500" }
-                  - { label: "Indigo 900", value: "indigo-900" }
+                  - { label: "Indigo 800", value: "indigo-800" }
                   - { label: "Blue 500", value: "blue-500" }
-                  - { label: "Red 500", value: "red-500" }
-                  - { label: "Red 900", value: "red-900" }
+                  - { label: "Coral 500", value: "coral-500" }
+                  - { label: "Coral 800", value: "coral-800" }
+                  - { label: "Yellow 200", value: "yellow-200" }
                   - { label: "Yellow 500", value: "yellow-500" }
-                  - { label: "Yellow 900", value: "yellow-900" }
                 default: ["indigo-100"]
                 required: false
               - label: "Border Colour"
@@ -67,13 +69,14 @@ collections:
                   - { label: "White", value: "white" }
                   - { label: "Black", value: "black" }                
                   - { label: "Indigo 100", value: "indigo-100" }
+                  - { label: "Indigo 200", value: "indigo-200" }
                   - { label: "Indigo 500", value: "indigo-500" }
-                  - { label: "Indigo 900", value: "indigo-900" }
+                  - { label: "Indigo 800", value: "indigo-800" }
                   - { label: "Blue 500", value: "blue-500" }
-                  - { label: "Red 500", value: "red-500" }
-                  - { label: "Red 900", value: "red-900" }
+                  - { label: "Coral 500", value: "coral-500" }
+                  - { label: "Coral 800", value: "coral-800" }
+                  - { label: "Yellow 200", value: "yellow-200" }
                   - { label: "Yellow 500", value: "yellow-500" }
-                  - { label: "Yellow 900", value: "yellow-900" }
                 default: ["indigo-500"]
                 required: false
               - {label: "Image", name: "image", widget: "image", required: false}
@@ -100,7 +103,7 @@ collections:
                 widget: "select"
                 options:
                   - { label: "Indigo 500", value: "indigo-500" }
-                  - { label: "Red 500", value: "red-500" }
+                  - { label: "Coral 500", value: "coral-500" }
                   - { label: "Yellow 500", value: "yellow-500" }
                 default: ["indigo-500"]
                 required: false
@@ -126,7 +129,7 @@ collections:
           - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
           - {label: "Social Image", name: "socialImage", widget: "image", required: false}
           - {label: "Intro", name: "intro", widget: "markdown", required: false}
-          - {label: "Header Background Colour", name: "headerBgColor", widget: "hidden", default: "blue-100"}
+          - {label: "Header Background Colour", name: "headerBgColor", widget: "hidden", default: "blue-200"}
           - {label: "Header Border Color", name: "headerBorderColor", widget: "hidden", default: "blue-500"}
           - {label: "Header Text Color", name: "headerTextColor", widget: "hidden", default: "black"}
           - label: Milestones
@@ -152,8 +155,8 @@ collections:
           - {label: "SEO Meta Title", name: "metaTitle", widget: "string", required: false}
           - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
           - {label: "Social Image", name: "socialImage", widget: "image", required: false}
-          - {label: "Header Background Colour", name: "headerBgColor", widget: "hidden", default: "red-500"}
-          - {label: "Header Border Color", name: "headerBorderColor", widget: "hidden", default: "red-900"}
+          - {label: "Header Background Colour", name: "headerBgColor", widget: "hidden", default: "coral-500"}
+          - {label: "Header Border Color", name: "headerBorderColor", widget: "hidden", default: "coral-800"}
           - {label: "Header Text Color", name: "headerTextColor", widget: "hidden", default: "black"}
           - label: "Projects"
             name: "projects"
@@ -195,13 +198,14 @@ collections:
           - { label: "White", value: "white" }
           - { label: "Black", value: "black" }                
           - { label: "Indigo 100", value: "indigo-100" }
+          - { label: "Indigo 200", value: "indigo-200" }
           - { label: "Indigo 500", value: "indigo-500" }
-          - { label: "Indigo 900", value: "indigo-900" }
+          - { label: "Indigo 800", value: "indigo-800" }
           - { label: "Blue 500", value: "blue-500" }
-          - { label: "Red 500", value: "red-500" }
-          - { label: "Red 900", value: "red-900" }
+          - { label: "Coral 500", value: "coral-500" }
+          - { label: "Coral 800", value: "coral-800" }
+          - { label: "Yellow 200", value: "yellow-200" }
           - { label: "Yellow 500", value: "yellow-500" }
-          - { label: "Yellow 900", value: "yellow-900" }
         default: ["indigo-100"]
         required: true
       - label: "Header Border Colour"
@@ -211,13 +215,14 @@ collections:
           - { label: "White", value: "white" }
           - { label: "Black", value: "black" }                
           - { label: "Indigo 100", value: "indigo-100" }
+          - { label: "Indigo 200", value: "indigo-200" }
           - { label: "Indigo 500", value: "indigo-500" }
-          - { label: "Indigo 900", value: "indigo-900" }
+          - { label: "Indigo 800", value: "indigo-800" }
           - { label: "Blue 500", value: "blue-500" }
-          - { label: "Red 500", value: "red-500" }
-          - { label: "Red 900", value: "red-900" }
+          - { label: "Coral 500", value: "coral-500" }
+          - { label: "Coral 800", value: "coral-800" }
+          - { label: "Yellow 200", value: "yellow-200" }
           - { label: "Yellow 500", value: "yellow-500" }
-          - { label: "Yellow 900", value: "yellow-900" }
         default: ["indigo-100"]
         required: true
       - label: "Header Text Colour"
@@ -227,13 +232,14 @@ collections:
           - { label: "White", value: "white" }
           - { label: "Black", value: "black" }                
           - { label: "Indigo 100", value: "indigo-100" }
+          - { label: "Indigo 200", value: "indigo-200" }
           - { label: "Indigo 500", value: "indigo-500" }
-          - { label: "Indigo 900", value: "indigo-900" }
+          - { label: "Indigo 800", value: "indigo-800" }
           - { label: "Blue 500", value: "blue-500" }
-          - { label: "Red 500", value: "red-500" }
-          - { label: "Red 900", value: "red-900" }
+          - { label: "Coral 500", value: "coral-500" }
+          - { label: "Coral 800", value: "coral-800" }
+          - { label: "Yellow 200", value: "yellow-200" }
           - { label: "Yellow 500", value: "yellow-500" }
-          - { label: "Yellow 900", value: "yellow-900" }
         default: ["black"]
         required: true
       - label: "Sections"
@@ -250,13 +256,14 @@ collections:
               - { label: "White", value: "white" }
               - { label: "Black", value: "black" }                
               - { label: "Indigo 100", value: "indigo-100" }
+              - { label: "Indigo 200", value: "indigo-200" }
               - { label: "Indigo 500", value: "indigo-500" }
-              - { label: "Indigo 900", value: "indigo-900" }
+              - { label: "Indigo 800", value: "indigo-800" }
               - { label: "Blue 500", value: "blue-500" }
-              - { label: "Red 500", value: "red-500" }
-              - { label: "Red 900", value: "red-900" }
+              - { label: "Coral 500", value: "coral-500" }
+              - { label: "Coral 800", value: "coral-800" }
+              - { label: "Yellow 200", value: "yellow-200" }
               - { label: "Yellow 500", value: "yellow-500" }
-              - { label: "Yellow 900", value: "yellow-900" }
             default: ["black"]
             required: false
           - label: "Background Colour"
@@ -266,13 +273,14 @@ collections:
               - { label: "White", value: "white" }
               - { label: "Black", value: "black" }                
               - { label: "Indigo 100", value: "indigo-100" }
+              - { label: "Indigo 200", value: "indigo-200" }
               - { label: "Indigo 500", value: "indigo-500" }
-              - { label: "Indigo 900", value: "indigo-900" }
+              - { label: "Indigo 800", value: "indigo-800" }
               - { label: "Blue 500", value: "blue-500" }
-              - { label: "Red 500", value: "red-500" }
-              - { label: "Red 900", value: "red-900" }
+              - { label: "Coral 500", value: "coral-500" }
+              - { label: "Coral 800", value: "coral-800" }
+              - { label: "Yellow 200", value: "yellow-200" }
               - { label: "Yellow 500", value: "yellow-500" }
-              - { label: "Yellow 900", value: "yellow-900" }
             default: ["indigo-100"]
             required: false
           - label: "Border Colour"
@@ -282,13 +290,14 @@ collections:
               - { label: "White", value: "white" }
               - { label: "Black", value: "black" }                
               - { label: "Indigo 100", value: "indigo-100" }
+              - { label: "Indigo 200", value: "indigo-200" }
               - { label: "Indigo 500", value: "indigo-500" }
-              - { label: "Indigo 900", value: "indigo-900" }
+              - { label: "Indigo 800", value: "indigo-800" }
               - { label: "Blue 500", value: "blue-500" }
-              - { label: "Red 500", value: "red-500" }
-              - { label: "Red 900", value: "red-900" }
+              - { label: "Coral 500", value: "coral-500" }
+              - { label: "Coral 800", value: "coral-800" }
+              - { label: "Yellow 200", value: "yellow-200" }
               - { label: "Yellow 500", value: "yellow-500" }
-              - { label: "Yellow 900", value: "yellow-900" }
             default: ["indigo-500"]
             required: false
           - {label: "Image", name: "image", widget: "string", required: false}
@@ -315,7 +324,7 @@ collections:
             widget: "select"
             options:
               - { label: "Indigo 500", value: "indigo-500" }
-              - { label: "Red 500", value: "red-500" }
+              - { label: "Coral 500", value: "coral-500" }
               - { label: "Yellow 500", value: "yellow-500" }
             default: ["indigo-500"]
             required: false
