--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "cssesc": "^3.0.0",
     "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
+    "eslint-config-xo-react": "^0.23.0",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "html-minifier": "^4.0.0",
     "husky": "^4.2.3",
     "image-size": "^0.8.3",
