--- a/.github/workflows/lighthouse-desktop.yml
+++ b/.github/workflows/lighthouse-desktop.yml
@@ -1,6 +1,13 @@
 name: Lighthouse CI - Desktop
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - dev
+      - master
+  pull_request:
+    branches:
+      - dev
 
 jobs:
   lhci:
