--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -32,3 +32,7 @@ jobs:
         npm run test:backstop
       env:
         CI: true
+    - uses: actions/upload-artifact@v2
+      with:
+        name: backstop-report
+        path: backstop_data/html_report
