--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -36,4 +36,7 @@ jobs:
       if: always()
       with:
         name: backstop-report
-        path: backstop_data/html_report
+        path: |
+          backstop_data/bitmaps_reference
+          backstop_data/html_report
+          backstop_data/bitmaps_test
