--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -35,7 +35,7 @@ jobs:
         CI: true
     - name: Upload report as downloadable artifact
       uses: actions/upload-artifact@v2
-      if: failure()
+      if: always()
       with:
         name: backstop-report
         path: |
@@ -43,11 +43,12 @@ jobs:
           backstop_data/html_report
           backstop_data/bitmaps_test
     - name: Write report to Markdown file
+      if: always()
       run: |
         sudo apt-get install jq
         cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq 'map(if .status == "fail" then "❌ [\(.pair.label) (\(.pair.viewportLabel))](\(.pair.url)) – \(.pair.diff.misMatchPercentage)% mismatch" else "✅ [\(.pair.label) (\(.pair.viewportLabel))](\(.pair.url))" end) | join("|")' | tr '|' '\n' >> backstop_data/json_report/report.md
     - uses: machine-learning-apps/pr-comment@master
-      if: failure()
+      if: always()
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
