--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -46,10 +46,11 @@ jobs:
       if: always()
       run: |
         sudo apt-get install jq
-        printf "**Backstop Results**\n\n" > backstop_data/json_report/report.md
-        cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'group_by(.status) | map(if .[0].status == "pass" then "✅\(length) scenarios passed" else "❌\(length) scenarios failed" end) | join(", ")' >> backstop_data/json_report/report.md
-        printf "\nTo review the full report, visit [the Github Actions page](https://github.com/inclusive-design/idrc/runs/$GITHUB_RUN_ID) and download the `backstop-report` artifact." >> backstop_data/json_report/report.md
-      # cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq 'map(if .status == "fail" then "❌ [\(.pair.label) (\(.pair.viewportLabel))](\(.pair.url)) – \(.pair.diff.misMatchPercentage)% mismatch" else "✅ [\(.pair.label) (\(.pair.viewportLabel))](\(.pair.url))" end) | join("|")' | tr '|' '\n' >> backstop_data/json_report/report.md
+        printf "**Visual Regression Test Results**\n\n" > backstop_data/json_report/report.md
+        cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'group_by(.status) | map(if .[0].status == "pass" then "✅ \(length) scenarios passed" else "❌ \(length) scenarios failed" end) | join(", ")' >> backstop_data/json_report/report.md
+        printf "\n\n<summary>Scenario Details<details>\n" >> backstop_data/json_report/report.md
+        cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'map(if .status == "fail" then "❌ [\(.pair.label) (\(.pair.viewportLabel))](\(.pair.url))" else "✅ [\(.pair.label) (\(.pair.viewportLabel))](\(.pair.url))" end) | join("|")' | tr '|' '\n' >> backstop_data/json_report/report.md
+        printf "</details></summary>\n\nTo review the full report with screenshots, visit [the Github Actions page](https://github.com/inclusive-design/idrc/runs/$GITHUB_RUN_ID) and download the _backstop-report_ artifact.\n\n" >> backstop_data/json_report/report.md
     - uses: machine-learning-apps/pr-comment@master
       if: always()
       env:
