feat: move news page into About section (resolves #57) (#74)
* feat: integrate sidebar into news page

* fix: adjust excerpt font size

* fix: add tablet layout for secondary navigation

* ci: annotate PR

* ci: fix PR comment reference

* ci: fix linting

* ci: fix linting

* fix: run upload artifact and annotation on failures only

* ci: fix path to JSON

* ci: write nicer report

* ci: always report

* ci: try cleaning up the report

* ci: remove quotes

* ci: adjust message

* ci: adjust message, use HTML within details element

* ci: before/after links

* ci: final adjustments to report

* ci: final adjustments to report

* ci: update reference images, output mismatch percentage

* ci: add instructions for approving changes

* ci: approve from GitHub

* ci: approve from GitHub

* ci: remove approval action

* ci: fix link to action run page

--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -42,3 +42,18 @@ jobs:
           backstop_data/bitmaps_reference
           backstop_data/html_report
           backstop_data/bitmaps_test
+    - name: Write report to Markdown file
+      if: always()
+      run: |
+        sudo apt-get install jq
+        printf "**Visual Regression Test Results**\n\n" > backstop_data/json_report/report.md
+        cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'group_by(.status) | map(if .[0].status == "pass" then "✅ \(length) scenarios passed" else "❌ \(length) scenarios failed" end) | join(", ")' >> backstop_data/json_report/report.md
+        printf "\n<details><summary>Scenario Details</summary>\n" >> backstop_data/json_report/report.md
+        cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'map(if .status == "fail" then "❌ \(.pair.label) (\(.pair.viewportLabel)) &mdash; <a href=\"\(.pair.referenceUrl)\">Before</a> / <a href=\"\(.pair.url)\">After</a> (\(.pair.diff.misMatchPercentage)% mismatch)" else "✅ \(.pair.label) (\(.pair.viewportLabel) &mdash; <a href=\"\(.pair.referenceUrl)\">Before</a> / <a href=\"\(.pair.url)\">After</a>" end) | join("<br />")' >> backstop_data/json_report/report.md
+        printf "</details>\n\nTo review the full report with screenshots, visit [the Github Actions page](https://github.com/inclusive-design/idrc/actions/runs/$GITHUB_RUN_ID) and download the _backstop-report_ artifact.\n\nIf these changes were intended, run \`npm run backstop:test && npm run backstop:approve\` locally and commit your changes." >> backstop_data/json_report/report.md
+    - uses: machine-learning-apps/pr-comment@master
+      if: always()
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        path: backstop_data/json_report/report.md
