--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,6 @@ src/_includes/static
 backstop_data/*
 !backstop_data/engine_scripts
 !backstop_data/bitmaps_reference
+
+# Nova configuration
+.nova
