--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -26,11 +26,12 @@ jobs:
       uses: allenevans/set-env@v1.1.0
       with:
         BASE_URL: ${{ steps.netlify.outputs.url }}
-    - name: Install dependencies and run visual regression tests
+    - name: Install dependencies, generate reference images, run visual regression tests
       run: |
         npm i
         npm i -g backstopjs
-        npm run test:backstop
+        npm run backstop:reference
+        npm run backstop:test
       env:
         CI: true
     - name: Upload report as downloadable artifact
