--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@ src/_includes/static
 # Backstop data
 backstop_data/*
 !backstop_data/engine_scripts
+!backstop_data/bitmaps_reference
 
 # Nova configuration
 .nova
