--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@tbranyen/jsdom": "^13.0.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "backstopjs": "^5.0.6",
     "clean-css": "^4.2.3",
     "cssesc": "^3.0.0",
     "dotenv": "^8.2.0",
