ci: differentiate between docker and ci backstop tests

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Website for the Inclusive Design Research Centre.",
   "main": "eleventy.config.js",
   "scripts": {
-    "backstop:reference": "backstop reference --docker --config=backstop.config.js",
-    "backstop:test": "backstop test --docker --config=backstop.config.js",
-    "backstop:approve": "backstop approve --docker --config=backstop.config.js",
+    "backstop:reference": "backstop reference --config=backstop.config.js",
+    "backstop:reference-docker": "backstop reference --docker --config=backstop.config.js",
+    "backstop:test": "backstop test --config=backstop.config.js",
+    "backstop:test-docker": "backstop test --docker --config=backstop.config.js",
+    "backstop:approve": "backstop approve --config=backstop.config.js",
     "build:site": "ELEVENTY_ENV=production eleventy",
     "build:bundle": "rollup --config",
     "build": "run-s clean build:*",
